adapt the init to M2 drop

--- a/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
+++ b/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
@@ -40,10 +40,10 @@
             <Label x:Name="RegioneErrorHint"  Content=""  Grid.Row="1"  Margin="220,35,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top"  Width="200" />
             <Label Content="Project"  Grid.Row="2"  HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top"/>
             <ComboBox x:Name="DeploymentProjectComboBox"  Grid.Row="2" Margin="25,25,0,0"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"/>
-            <Label Content="Deployment Name"  Grid.Row="3"  HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top"/>
+            <Label Content="Application Name"  Grid.Row="3"  HorizontalAlignment="Left" Margin="20,0,0,0" VerticalAlignment="Top"/>
             <TextBox x:Name="DeploymentNameTextBox" Grid.Row="3" Height="25" Margin="25,25,0,0" TextWrapping="Wrap"  HorizontalAlignment="Left" VerticalAlignment="Top" Width="180"  Opacity="0.8"/>
             <Label Content="10 characters maximum. Only alphanumeric characters are allowed.(spaces, dash, sp.chars)"  Grid.Row="3"  HorizontalAlignment="Left" Margin="20,50,0,0" VerticalAlignment="Top" Opacity="0.81"/>
-            <Button Content="Deploy" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Button Content="Run" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
             <Button Content="Next" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_1"/>
             <Button Content="Back" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,210,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
             <Button Content="Cancel" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,300,20" VerticalAlignment="Bottom" Width="80" Click="Cancel_Click"/>
@@ -67,7 +67,7 @@
             </Grid>
             <RadioButton x:Name="NewVPCCheck" Content="Create a new AWS VPC for this test deployment" Grid.Row="1" HorizontalAlignment="Left" Margin="25,120,0,0" VerticalAlignment="Top" Checked="RadioButton_Checked_1"/>
             <TextBlock Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="45,140,20,0" TextWrapping="Wrap" Text="Builds and deploys into a new AWS environment consisting of the VPC, subnets, NAT gateway, security groups, bastion hosts, and other infrastracture components." Opacity="0.8" />
-            <Button Content="Deploy" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Button Content="Run" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
             <Button Content="Next" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_2"/>
             <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,210,20" VerticalAlignment="Bottom" Width="80" Click="Back_Click_2"/>
             <Button Content="Cancel" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,300,20" VerticalAlignment="Bottom" Width="80" Click="Cancel_Click"/>
@@ -78,28 +78,53 @@
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="*"/>
+                <RowDefinition Height="*"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <Label Content="Manual configuration with JSON editing"  Grid.Row="2"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+            <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Review the following Summary Settings." />
+            <Label Content="Step 1 - General Setting"  Grid.Row="1"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14"/>
+            <TextBlock Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
+
+            <Label Content="Step 2 - VPC"  Grid.Row="2"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14"/>
+            <TextBlock Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
+
+            <Label Content="Step 3 - Advanced (optinoal)"  Grid.Row="3"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14"/>
             <TextBlock Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
-            <Button Content="Deploy" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
-            <Button Content="Next" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_3"/>
-            <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,210,20" VerticalAlignment="Bottom" Width="80" Click="Back_Button_Click_3"/>
+            <Button Content="Run" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Button Content="Next" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" Click="Next_Button_Click_3"/>
+            <Button Content="Back" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,210,20" VerticalAlignment="Bottom" Width="80" Click="Back_Button_Click_3"/>
             <Button Content="Cancel" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,300,20" VerticalAlignment="Bottom" Width="80" Click="Cancel_Click"/>
         </Grid>
 
         <Grid x:Name="ReviewGrid" Visibility="Hidden" Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch" Grid.Column="1" Grid.Row="0" Background="White">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="*"/>
+                <RowDefinition Height="auto"/>
+                <RowDefinition Height="auto"/>
                 <RowDefinition Height="*"/>
                 <RowDefinition Height="60"/>
             </Grid.RowDefinitions>
-            <Label Content="This is review"  Grid.Row="2"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
-            <TextBlock Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
-            <Button Content="Deploy" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Deploy_Click"/>
-            <Button Content="Next" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
-            <Button Content="Back" Grid.Row="3" HorizontalAlignment="Right" Margin="0,0,210,20" VerticalAlignment="Bottom" Width="80" Click="Back_Button_Click_4"/>
+            <Label Content="This is review"  Grid.Row="0"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
+            <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Review the following Summary Settings." />
+            <Label Content="Step 1 - General Setting"  Grid.Row="1"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14"/>
+            <Label Content="Profile :"  Grid.Row="1"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="Review_Prfile_Textblock" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="75,25,0,0" TextWrapping="Wrap" Text="profile" FontWeight="Bold" />
+            <Label Content="Region :"  Grid.Row="1"  Margin="20,40,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="Review_Region_Textblock" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="75,45,0,0" TextWrapping="Wrap" Text="region" FontWeight="Bold" />
+            <Label Content="Project :"  Grid.Row="1"  Margin="20,60,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="Review_Project_Textblock" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="75,65,0,0" TextWrapping="Wrap" Text="project" FontWeight="Bold" />
+            <Label Content="Application Name :"  Grid.Row="1"  Margin="20,80,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="Review_Application_Name_Textblock" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="130,85,0,0" TextWrapping="Wrap" Text="application" FontWeight="Bold" />
+
+            <Label Content="Step 2 - VPC"  Grid.Row="2"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14"/>
+            <Label Content="VPC :"  Grid.Row="2"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
+            <TextBlock x:Name="Review_VPC_Textblock" Grid.Row="2" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="55,25,0,0" TextWrapping="Wrap" Text="VPC" FontWeight="Bold" />
+
+            <Label Content="Step 3 - Advanced (optinoal)"  Grid.Row="3"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14"/>
+            <TextBlock Grid.Row="3" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Provision a logically section of the AWS cloud to lauch AWS resources. The VPC in which .Net application will be deployed on." />
+            <Button Content="Run" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,30,20" VerticalAlignment="Bottom" Width="80" Click="Deploy_Click"/>
+            <Button Content="Next" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,120,20" VerticalAlignment="Bottom" Width="80" IsEnabled="False"/>
+            <Button Content="Back" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,210,20" VerticalAlignment="Bottom" Width="80" Click="Back_Button_Click_4"/>
             <Button Content="Cancel" Grid.Row="5" HorizontalAlignment="Right" Margin="0,0,300,20" VerticalAlignment="Bottom" Width="80" Click="Cancel_Click"/>
         </Grid>
 
