--- a/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
+++ b/src/PortingAssistantVSExtensionClient/Dialogs/TestDeploymentDialog.xaml
@@ -109,7 +109,7 @@
             </Grid.RowDefinitions>
             <Label Content="This is review"  Grid.Row="0"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14" FontWeight="Bold"/>
             <TextBlock Grid.Row="0" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,30,20,0" TextWrapping="Wrap" Text="Review the following Summary Settings." />
-            <Label Content="Step 1 - General Setting"  Grid.Row="1"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14"/>
+            <Label Content="Step 1 - General Settings"  Grid.Row="1"  Margin="20,0,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top" FontSize="14"/>
             <Label Content="Profile :"  Grid.Row="1"  Margin="20,20,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
             <TextBlock x:Name="Review_Prfile_Textblock" Grid.Row="1" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="75,25,0,0" TextWrapping="Wrap" Text="profile" FontWeight="Bold" />
             <Label Content="Region :"  Grid.Row="1"  Margin="20,40,0,0" HorizontalAlignment="Left"  VerticalAlignment="Top"/>
