--- a/src/PortingAssistantExtensionClientShared/Dialogs/PortingDialog.xaml
+++ b/src/PortingAssistantExtensionClientShared/Dialogs/PortingDialog.xaml
@@ -17,10 +17,10 @@
         </Grid.RowDefinitions>
 
         <Image x:Name="InfoSign" Source="../Resources/StatusInformation.png" HorizontalAlignment="Left" Margin="10,20,0,20" VerticalAlignment="Top" Height="25" Width="25" Grid.Column="0" Grid.Row="0"></Image>
-        
+
         <Label Content="Porting is final and cannot be undone." HorizontalAlignment="Left" Margin="40,15,0,20" VerticalAlignment="Top" Grid.Column="0" Grid.Row="0" FontSize="14"/>
-        <CheckBox x:Name="ApplyPortActionCheck" Content="  Select check box to apply recommended source code changes &#xD;&#xA;  (indicated by wavy underlines in your source code).&#xA;" HorizontalAlignment="Left" Margin="15,0,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.Row="1" />
-        <Button Content="Port" HorizontalAlignment="Right" Margin="10,10,10,15" VerticalAlignment="Bottom" Width="75" Grid.Column="0"  Grid.Row="2" Height="20" Click="Button_Click_1"/>
-        <Button Content="Cancel" HorizontalAlignment="Right" Margin="10,10,95,15" VerticalAlignment="Bottom" Width="75" Grid.Column="0"  Grid.Row="2" Height="20" Click="Button_Click"/>
+        <TextBlock x:Name="WebFormsText" Margin="40,0,0,0" VerticalAlignment="Bottom" Grid.Column="0" Grid.Row="1" FontSize="14" Height="32">WebForms Projects will be Ported to Blazor.</TextBlock>
+        <CheckBox x:Name="ApplyPortActionCheck" Content="  Select check box to apply recommended source code changes &#xD;&#xA;  (indicated by wavy underlines in your source code).&#xA;" HorizontalAlignment="Left" Margin="15,0,0,0" VerticalAlignment="Top" Grid.Column="0" Grid.Row="2" />
+        <Button Content="Port" HorizontalAlignment="Right" Margin="10,10,10,15" VerticalAlignment="Bottom" Width="75" Grid.Column="0"  Grid.Row="3" Height="20" Click="Button_Click_1"/>
     </Grid>
 </ui:DialogWindow>
