--- a/src/PortingAssistantExtensionClientShared/Dialogs/SelectTargetDialog.xaml
+++ b/src/PortingAssistantExtensionClientShared/Dialogs/SelectTargetDialog.xaml
@@ -5,7 +5,7 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:ui="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
              xmlns:local="clr-namespace:PortingAssistantVSExtensionClient.Dialogs"
-             mc:Ignorable="d" Height="190" Width="480">
+             mc:Ignorable="d" Height="218" Width="480" MinHeight="218" MinWidth="480">
     <Grid Margin="0,0,0,0" VerticalAlignment="Stretch" HorizontalAlignment="Stretch">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
