--- a/src/PortingAssistantExtensionClientShared/Dialogs/WelcomeDialog.xaml
+++ b/src/PortingAssistantExtensionClientShared/Dialogs/WelcomeDialog.xaml
@@ -5,7 +5,7 @@
 	              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
 	              xmlns:ui="clr-namespace:Microsoft.VisualStudio.PlatformUI;assembly=Microsoft.VisualStudio.Shell.15.0"
 	              xmlns:local="clr-namespace:PortingAssistantVSExtensionClient.Dialogs"
-	              mc:Ignorable="d" d:DesignWidth="1000" Width="1000" Height="650">
+	              mc:Ignorable="d" d:DesignWidth="1000" Width="1000" Height="784">
     <Grid x:Name="AddProfile" Margin="0,0,0,0" HorizontalAlignment="Stretch">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"></ColumnDefinition>
@@ -16,6 +16,8 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
         <Label Content="Get Started With Porting Assistant for .NET" HorizontalAlignment="Stretch" Margin="120,40,0,0" Grid.Row="0" Grid.Column="0" VerticalAlignment="Center" FontSize="36"/>
         <Image x:Name="IconHolder" HorizontalAlignment="Left" Margin="20,50,0,0" Height="80" Width="80" VerticalAlignment="Center" Grid.Row="0" Grid.Column="0" Source="../Resources/PortingAssistantLogo.png"/>
@@ -24,15 +26,15 @@
         <Label Content="You can change this setting at anytime in tools options." HorizontalAlignment="Left" Margin="20,100,0,0" VerticalAlignment="Top" FontSize="14" Opacity="0.6" Grid.Row="1" Grid.Column="0"/>
         <TextBlock HorizontalAlignment="Stretch" Margin="20,10,15,10" TextWrapping="Wrap" TextAlignment="Justify" VerticalAlignment="Top" FontSize="14" Grid.Row="2" Grid.Column="0"><Run Text="Porting Assistant for .NET Data Usage Sharing" FontWeight="Bold"/><LineBreak/><LineBreak/><Run Text="When you share your usage data, Porting Assistant for .NET collects information only about the public NuGet packages, APIs, build errors, and stack traces. This information is used to make Porting Assistant for .NET better, for example, by improving the package and API replacement recommendations. Porting Assistant for .NET does not collect any identifying information about you. "/><Hyperlink NavigateUri="https://docs.aws.amazon.com/portingassistant/latest/userguide/how-porting-assistant-works.html#porting-assistant-information-collected" Click="Hyperlink_Click_1">To learn more, see Information Collected</Hyperlink></TextBlock>
         <TextBlock HorizontalAlignment="Stretch" Margin="20,10,15,10" TextWrapping="Wrap" TextAlignment="Justify" VerticalAlignment="Top" FontSize="14" Grid.Row="3" Grid.Column="0"><Run Text="Porting Assistant for .NET is licensed as &quot;AWS Content&quot; under the terms and conditions of the AWS Customer Agreement located at Agreement and the Service Terms located at Service-Terms. By installing, using or accessing the Porting Assistant for .NET tool, you agree to such terms and conditions. The term &quot;AWS Content&quot; does not include software and assets distributed under separate license terms (such as code licensed under an open source license). "/><Hyperlink NavigateUri="https://aws.amazon.com/agreement">AWS Customer Agreement</Hyperlink><Run Text=" and "/><Hyperlink NavigateUri="https://aws.amazon.com/service-terms" Click="Hyperlink_Click_3"> Service Terms.</Hyperlink></TextBlock>
-        <Label Content="AWS Profile" HorizontalAlignment="Left" Margin="15,-150,0,0" VerticalAlignment="Center"  FontSize="14" Grid.Row="4" Grid.Column="0"/>
-        <ComboBox x:Name="Profiles" HorizontalAlignment="Left" Margin="20,-100,0,0" VerticalAlignment="Center" Width="340" Grid.Row="4" Grid.Column="0" SelectionChanged="Profiles_SelectionChanged"/>
-        <Label x:Name="WarningBar" Content="" HorizontalAlignment="Left" Margin="380,-100,0,0" VerticalAlignment="Center" Foreground="Red" FontSize="14" Grid.Row="4" Grid.Column="0"/>
-        <Button Content="Add Named Profile" HorizontalAlignment="Left" Margin="20,-30,0,20" VerticalAlignment="Top"  Background="{x:Null}" BorderThickness="0" Cursor="Hand" Foreground="Blue" Click="Button_Click_1" Grid.Row="4" Grid.Column="0"/>
-        <Button Content=" Cancel " HorizontalAlignment="Right" Margin="20,-40,120,30" VerticalAlignment="Top" Grid.Row="4" Grid.Column="0" FontSize="16" Width="80" Click="Button_Click_2"/>
-        <Button Content=" Save " HorizontalAlignment="Right" Margin="20,-40,20,30" VerticalAlignment="Top" Click="Button_Click" Grid.Row="4" Grid.Column="0" FontSize="16" Width="80"/>
-
-
-
+        <RadioButton x:Name="AWSProfileSelect" GroupName="CredentialsSelection" Checked="SDKChain_Checked"  Content="Use the AWS SDK Default Provider Chain" VerticalAlignment="Center" Grid.Row="4" FontSize="14" Margin="20,-300,0,0"/>
+        <Label x:Name="WarningBarDefaultCreds" Content="" HorizontalAlignment="Left" Margin="300,-300,0,0" VerticalAlignment="Center" Foreground="Red" FontSize="14" Grid.Row="4" RenderTransformOrigin="0.479,-0.084"/>
+        <RadioButton GroupName="CredentialsSelection" Checked="AWSProfile_Checked" IsChecked="True" Content="Use AWS Profile" VerticalAlignment="Center" Grid.Row="4" FontSize="14" Margin="20,-250,0,0"/>
+        <Label x:Name="AwsProfileLabel" Content="AWS Profile" IsEnabled="True" HorizontalAlignment="Left" Margin="33,-210,0,0" VerticalAlignment="Center"  FontSize="14" Grid.Row="5" Grid.Column="0"/>
+        <ComboBox x:Name="Profiles" IsEnabled="True" HorizontalAlignment="Left" Margin="33,-160,0,0" VerticalAlignment="Center" Width="340" Grid.Row="5" Grid.Column="0" SelectionChanged="Profiles_SelectionChanged"/>
+        <Label x:Name="WarningBar" Content="" HorizontalAlignment="Left" Margin="395,-160,0,0" VerticalAlignment="Center" Foreground="Red" FontSize="14" Grid.Row="4" Grid.Column="0"/>
+        <Button x:Name="AddProfileButton" Content="Add Named Profile" IsEnabled="True" HorizontalAlignment="Left" Margin="33,-90,0,20" VerticalAlignment="Center"  Background="{x:Null}" BorderThickness="0" Cursor="Hand" Foreground="Blue" Click="Button_Click_1" Grid.Row="5" Grid.Column="0"/>
+        <Button Content=" Cancel " HorizontalAlignment="Right" Margin="20,-40,120,30" VerticalAlignment="Top" Grid.Row="6" Grid.Column="0" FontSize="16" Width="80" Click="Button_Click_2"/>
+        <Button Content=" Save " HorizontalAlignment="Right" Margin="20,-40,20,30" VerticalAlignment="Top" Click="Button_Click" Grid.Row="6" Grid.Column="0" FontSize="16" Width="80"/>
 
     </Grid>
 </ui:DialogWindow>
